--- a/css/index.css
+++ b/css/index.css
@@ -214,6 +214,11 @@ div.head {
     flex-direction: column;
 }
 
+div.head a {
+    color: black;
+    text-decoration: none
+}
+
 div.head div {
     display: flex;
     justify-content: space-between;
